<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_task_name"
        style="@style/tvTaskStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:text="@string/tv_task_name" />

    <EditText
        android:id="@+id/et_task_name"
        style="@style/tvTaskStyle"
        android:hint="@string/et_task_name_hint"
        android:autofillHints="@string/et_task_name_hint"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/tv_task_name"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_task_name"
         />

    <TextView
        android:id="@+id/tv_task_date"
        style="@style/tvTaskStyle"
        app:layout_constraintTop_toBottomOf="@+id/et_task_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_task_date" />

    <Button
        android:id="@+id/btn_picker_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_task_date"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_task_date"
        android:hint="@string/btn_picker_task_date_hint"
        android:autofillHints="@string/btn_picker_task_date_hint"
        style="?android:spinnerStyle"
        android:fontFamily="@font/lato_regular"
        android:textSize="18dp"
        android:onClick="openDatePicker"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/rg_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/tv_task_date"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    <RadioButton
        android:id="@+id/rb_job"
        style="@style/tvTaskStyle"
        android:text="@string/rb_job"
        />

    <RadioButton
        android:id="@+id/rb_shopping"
        style="@style/tvTaskStyle"
        android:text="@string/rb_shopping"
        />

    <RadioButton
        android:id="@+id/rb_other"
        style="@style/tvTaskStyle"
        android:text="@string/rb_other"
        />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_add_task"
                style="@style/btnStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"

                android:text="@string/btn_add_task_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/btnStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_cancel_title"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>